# multi-claude

./: CHANGELOG.md  README.md  pyproject.toml
docs/: DESIGN.md
src/multi_claude/: __main__.py  app.py  app_protocol.py  config.py  deletion.py  discovery.py  filtering.py  index.py  launcher.py  modals.py  project_folders.py  session.py  tags.py
src/multi_claude/screens/: folder.py  projects.py  sessions.py
tests/: test_app_integration.py  test_config.py  test_filtering.py  test_launcher.py  test_path_complete.py  test_project_folders.py  test_session.py  test_tags.py
